# polyglot-systems-manager

./: .gitignore  LICENSE  Notes.txt  README.md  config.yaml
collectors/cpp/: CMakeLists.txt  README.md
collectors/cpp/include/: cpu_usage.h  disk_usage.h  memory_usage.h  metrics.hpp  uptime.h
collectors/cpp/src/: cpu_usage_linux.cpp  cpu_usage_windows.cpp  disk_usage_linux.cpp  disk_usage_windows.cpp  main.cpp  memory_usage_linux.cpp  memory_usage_windows.cpp  metrics.cpp  uptime_linux.cpp  uptime_windows.cpp
dashboard/: app.js  index.html  styles.css
orchestrator/: README.md  config.yaml  main.py  pyproject.toml
orchestrator/core/: __init__.py  config.py  models.py  orchestrator.py  service_process.py
orchestrator/server/: __init__.py  app.py  routes.py
orchestrator/src/orchestrator/: config.py  main.py
orchestrator/src/orchestrator/dashboard/: app.js  index.html
web/: index.html
web/css/: styles.css
web/js/: app.js
