[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polyglot-orchestrator"
version = "0.1.0"
description = "Control plane for the Polyglot Systems Manager"
authors = [
    { name = "Matt" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "Flask>=3.0.0",
    "requests>=2.31.0",
    "pydantic>=2.6.0",
    "PyYAML>=6.0.1"
]

[project.scripts]
psm-orchestrator = "main:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "server*"]
